Setup color variables and other recommend styles from the style guide

--- a/index.html
+++ b/index.html
@@ -5,13 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Four card feature section</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    :root{
+      --Primary-Red: hsl(0, 78%, 62%);
+      --Primary-Cyan: hsl(180, 62%, 55%);
+      --Primary-Orange: hsl(34, 97%, 64%);
+      --Primary-Blue: hsl(212, 86%, 64%);
+
+      --Neutral-Very-Dark-Blue: hsl(234, 12%, 34%);
+      --Neutral-Grayish-Blue: hsl(229, 6%, 66%);
+      --Neutral-Very-Light-Gray: hsl(0, 0%, 98%);
+    }
+
+    body {
+      font-family: 'Poppins', sans-serif;
+      font-size: 15px;
+    }
   </style>
 </head>
 <body>
