--- a/index.html
+++ b/index.html
@@ -137,6 +137,12 @@
       }
     }  
 
+    @media only screen and (min-width: 1150px) {
+      body {
+        margin: 0 15vw;
+      }
+    }
+
   </style>
 </head>
 <body>
