--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
       font-weight: 200;
     }
 
+    .content__column {
+      display: flex;
+      justify-content: center;
+    }
+
     .card {
       border: .1em solid lightgray;
       background-color: white;
@@ -54,6 +59,7 @@
       padding: 15px;
       margin-bottom: 15px;
       border-radius: 10px;
+      max-width: 300px;
     }
 
     .image__container--style {
@@ -81,7 +87,7 @@
 
     .card__karma--style {
       border-top: .35em solid var(--Primary-Orange);
-      min-width: 93%;
+      /* min-width: 93%; */
     }
 
     .card__calculator--style{
@@ -100,7 +106,7 @@
       text-align: center;
     }
 
-    @media only screen and (min-width: 600px) {
+    @media only screen and (min-width: 800px) {
       main {
         display: flex;
       }
@@ -129,7 +135,7 @@
         width: 60%;
         margin: auto;
         text-align: center;
-        margin-bottom: 30px;
+        margin-bottom: 80px;
       }
 
       .card__karma--style {
