Fix visually gap issue for Calculator card

--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
         justify-content: right;
       }
 
+      .left {
+        justify-content: left;
+      }
+
       .content__column--style {
         display: flex;
       }
@@ -183,7 +187,7 @@
         </div>
       </div>
     </div>
-    <div class="content__column--style content__column">
+    <div class="content__column--style content__column left">
       <div class="card card__calculator--style">
         <h2>Calculator</h2>
         <p class="content--style">Uses data from past projects to provide better delivery estimates</p>
