Move styles to a stylesheet

--- a/index.html
+++ b/index.html
@@ -3,157 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" type="text/css" href="./style.css"  />
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Four card feature section</title>
-  <style>
-    :root{
-      --Primary-Red: hsl(0, 78%, 62%);
-      --Primary-Cyan: hsl(180, 62%, 55%);
-      --Primary-Orange: hsl(34, 97%, 64%);
-      --Primary-Blue: hsl(212, 86%, 64%);
-
-      --Neutral-Very-Dark-Blue: hsl(234, 12%, 34%);
-      --Neutral-Grayish-Blue: hsl(229, 6%, 66%);
-      --Neutral-Very-Light-Gray: hsl(0, 0%, 98%);
-    }
-
-    body {
-      font-family: 'Poppins', sans-serif;
-      font-size: 15px;
-      margin: 0 25px;
-      background-color: var(--Neutral-Very-Light-Gray);
-    }
-
-    h1 {
-      color: var(--Neutral-Grayish-Blue);
-      font-size: x-large;
-      font-weight: 200;
-    }
-
-    .header__AlternativeTitle--style {
-      display: block;
-      color: var(--Neutral-Very-Dark-Blue);
-      font-weight: 600;
-    }
-
-    .content--style {
-      color: var(--Neutral-Grayish-Blue);
-      font-weight: 200;
-    }
-
-    .content__column {
-      display: flex;
-      justify-content: center;
-    }
-
-    .card {
-      border: .1em solid lightgray;
-      background-color: white;
-      box-shadow: 3px 3px 14px 7px rgba(207 198 198 / 30%);
-      -webkit-box-shadow: 3px 3px 14px 7px rgb(207 198 198 / 30%);
-      -moz-box-shadow: 3px 3px 14px 7px rgba(207 198 198 / 30%);
-      padding: 15px;
-      margin-bottom: 15px;
-      border-radius: 10px;
-      max-width: 300px;
-    }
-
-    .image__container--style {
-      display: flex;
-      justify-content: end;
-    }
-
-    .image--style {
-      max-height: 40px;
-      margin-right: 40px;
-    }
-
-    h2 {
-      margin: 0;
-    }
-
-    .card__supervisor--style {
-      border-top: .35em solid var(--Primary-Cyan);
-      align-self: center;
-    }
-
-    .card__team--style {
-      border-top: .35em solid var(--Primary-Red);
-    }
-
-    .card__karma--style {
-      border-top: .35em solid var(--Primary-Orange);
-      /* min-width: 93%; */
-    }
-
-    .card__calculator--style{
-      border-top: .35em solid var(--Primary-Blue);
-      align-self: center;
-    }
-
-    .content__secondColumn--style {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-
-    header {
-      text-align: center;
-    }
-
-    @media only screen and (min-width: 800px) {
-      main {
-        display: flex;
-      }
-
-      .card {
-        max-width: 300px;
-      }
-
-      .right {
-        justify-content: right;
-      }
-
-      .left {
-        justify-content: left;
-      }
-
-      .content__column--style {
-        display: flex;
-      }
-
-      .content__secondColumn--style {
-        margin: 0 15px;
-      }
-
-      .content__column {
-        width: 100%;
-      }
-
-      header {
-        width: 60%;
-        margin: auto;
-        text-align: center;
-        margin-bottom: 80px;
-      }
-
-      .card__karma--style {
-        min-width: auto;
-      }
-    }  
-
-    @media only screen and (min-width: 1150px) {
-      body {
-        margin: 0 15vw;
-      }
-    }
-
-  </style>
 </head>
 <body>
   <header>
